Removed generated code and added code generation workflow.
Change-Id: I54f51a6faa22a53edef20455675abf4c163e1805