@@ -1074,7 +1074,7 @@ public class ActorCalendar extends ViewPart implements IDoubleClickListener {
 		
 		if(month == "January") {
 			for(int i = 0; i < 31; i++) {
-				Integer j = new Integer(i+1);
+				Integer j = Integer.valueOf(i+1);
 				if (date.equals(j.toString())) {
 					index = i;
 				}
